# coal-pool-mobile-ffi

./: .gitignore  Cargo.toml  Makefile  build.rs  uniffi-bindgen.rs
src/: coalpoolmobileffi.udl  drillxmobile.udl  lib.rs  orehqmobileffi.udl
src/uniffi/coalpoolmobileffi/: coalpoolmobileffi.kt
