[package]
name = "drillx-mobile"
version = "0.1.0"
edition = "2021"

[lib]
name = "drillxmobile"
crate-type = ["cdylib"]
[dependencies]
uniffi = "0.28.1"
[build-dependencies]
uniffi = { version = "0.28.1", features = ["build"] }
[dev-dependencies]
uniffi = { version = "0.28.1", features = ["bindgen-tests"] }
