[package]
name = "ore-hq-mobile-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "orehqmobileffi"
crate-type = ["cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[target.x86_64-linux-android]
#ar = "/Users/kriptikz/Library/Android/sdk/ndk/27.1.12297006/toolchains/llvm/prebuilt/darwin-x86_64/bin/x86_64-linux-android-ar"
linker = "/Users/kriptikz/Library/Android/sdk/ndk/27.1.12297006/toolchains/llvm/prebuilt/darwin-x86_64/bin/x86_64-linux-android26-clang"

[target.i686-linux-android]
#ar = "/Users/kriptikz/Library/Android/sdk/ndk/27.1.12297006/toolchains/llvm/prebuilt/darwin-x86_64/bin/i686-linux-android-ar"
linker = "/Users/kriptikz/Library/Android/sdk/ndk/27.1.12297006/toolchains/llvm/prebuilt/darwin-x86_64/bin/i686-linux-android26-clang"

[target.armv7-linux-androideabi]
#ar = "/Users/kriptikz/Library/Android/sdk/ndk/27.1.12297006/toolchains/llvm/prebuilt/darwin-x86_64/bin/armv7a-linux-androideabi-ar"
linker = "/Users/kriptikz/Library/Android/sdk/ndk/27.1.12297006/toolchains/llvm/prebuilt/darwin-x86_64/bin/armv7a-linux-androideabi26-clang"

[target.aarch64-linux-android]
ar = "/Users/kriptikz/Library/Android/sdk/ndk/27.1.12297006/toolchains/llvm/prebuilt/darwin-x86_64/bin/llvm-ar"
linker = "/Users/kriptikz/Library/Android/sdk/ndk/27.1.12297006/toolchains/llvm/prebuilt/darwin-x86_64/bin/aarch64-linux-android26-clang"


[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
uniffi = "0.28.1"
drillx = "2.1.0"
serde = "1.0.210"
solana-sdk = "1.18.21"
tiny-bip39 = "0.8.2"
thiserror = "1.0.64"


[build-dependencies]
uniffi = { version = "0.28.1", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.28.1", features = ["bindgen-tests"] }

