[package]
name = "coal-pool-mobile-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "coalpoolmobileffi"
crate-type = ["cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[target.x86_64-linux-android]
#ar = "/Users/shiny/Library/Android/sdk/ndk/27.1.12297006/toolchains/llvm/prebuilt/darwin-x86_64/bin/x86_64-linux-android-ar"
linker = "/Users/shiny/Library/Android/sdk/ndk/27.1.12297006/toolchains/llvm/prebuilt/darwin-x86_64/bin/x86_64-linux-android26-clang"

[target.i686-linux-android]
#ar = "/Users/shiny/Library/Android/sdk/ndk/27.1.12297006/toolchains/llvm/prebuilt/darwin-x86_64/bin/i686-linux-android-ar"
linker = "/Users/shiny/Library/Android/sdk/ndk/27.1.12297006/toolchains/llvm/prebuilt/darwin-x86_64/bin/i686-linux-android26-clang"

[target.armv7-linux-androideabi]
#ar = "/Users/shiny/Library/Android/sdk/ndk/27.1.12297006/toolchains/llvm/prebuilt/darwin-x86_64/bin/armv7a-linux-androideabi-ar"
linker = "/Users/shiny/Library/Android/sdk/ndk/27.1.12297006/toolchains/llvm/prebuilt/darwin-x86_64/bin/armv7a-linux-androideabi26-clang"

[target.aarch64-linux-android]
ar = "/Users/shiny/Library/Android/sdk/ndk/27.1.12297006/toolchains/llvm/prebuilt/darwin-x86_64/bin/llvm-ar"
linker = "/Users/shiny/Library/Android/sdk/ndk/27.1.12297006/toolchains/llvm/prebuilt/darwin-x86_64/bin/aarch64-linux-android26-clang"


[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
uniffi = "0.28.2"
drillx = "2.1.0"
serde = "1.0.214"
solana-sdk = "2.1.0"
tiny-bip39 = "2.0.0"
thiserror = "1.0.66"


[build-dependencies]
uniffi = { version = "0.28.2", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.28.2", features = ["bindgen-tests"] }

